[package]
name = "epub-parser-web"
version = "1.2.0"
authors = ["wenyikun <wenyikun86@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
epub = "2.1.2"
serde = { version = "1.0.217", features = ["derive"] }
base64 = "0.22.1"
md5 = "0.8.0"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.77", features = ["Blob", "Url", "DomParser"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
